feat(cli): upgrade --add-modules installs a module on an initialized backend
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>